target/debug/build/eyre-a7bcf1892cac070f/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /home/yarovoy/Downloads/course/target/debug/build/eyre-a7bcf1892cac070f/out/probe.rs:2:16
  |
2 |     #![feature(backtrace)]
  |                ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
